--- a/portfolio.html
+++ b/portfolio.html
@@ -63,90 +63,155 @@
 
         <ul class="progects">
           <li class="item">
-            <img src="./images/laptop.jpg" alt="Технокряк" width="370px" />
+            <a href="" class="projects-link">
+              <div class="project-thumb">
+              <img src="./images/laptop.jpg" alt="Технокряк" width="370" />
+              
+              <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
            <div class="group-item">
             <h2 class="progect">Технокряк</h2>
             <p class="progect-name">Веб-сайт</p>
             </div>
+            </a>
           </li>
           <li class="item">
-            <img
-              src="./images/people.jpg"
-              alt="Постер New Orlean vs Golden Star"
-              width="370px"
-            />
+            <a href="" class="projects-link">
+              <div class="project-thumb">
+              <img
+                src="./images/people.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+              />
+               <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
              <div class="group-item">
             <h2 class="progect">Постер New Orlean vs Golden Star</h2>
             <p class="progect-name">Дизайн</p>
             </div>
+            </a>
           </li>
           <li class="item">
-            <img
-              src="./images/seafood.jpg"
-              alt="Ресторан Seafood"
-              width="370px"
-            />
+            <a href="" class="projects-link">
+              <div class="project-thumb">
+              <img
+                src="./images/seafood.jpg"
+                alt="Ресторан Seafood"
+                width="370"
+              />
+               <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
              <div class="group-item">
             <h2 class="progect">Ресторан Seafood</h2>
             <p class="progect-name">Приложение</p>
             </div>
+            </a>
           </li>
           <li class="item">
-            <img
-              src="./images/headphones.jpg"
-              alt="Проект Prime"
-              width="370px"
-            />
+            <a href="" class="projrcts-link">
+              <div class="project-thumb">
+              <img
+                src="./images/headphones.jpg"
+                alt="Проект Prime"
+                width="370"
+              />
+               <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
              <div class="group-item">
             <h2 class="progect">Проект Prime</h2>
             <p class="progect-name">Маркетинг</p>
             </div>
+            </a>
           </li>
           <li class="item">
-            <img src="./images/boxes.jpg" alt="Проект Boxes" width="370px" />
-             <div class="group-item">
-            <h2 class="progect">Проект Boxes</h2>
+           <a href="" class="projects-link">
+              <div class="project-thumb">
+             <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
+            <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
+              <div class="group-item">
+                <h2 class="progect">Проект Boxes</h2>
             <p class="progect-name">Приложение</p>
             </div>
+           </a>
           </li>
           <li class="item">
-            <img
+            <a href="" class="progects-link">
+              <div class="project-thumb">
+              <img
               src="./images/monitor.jpg"
               alt="Веб-сайт Inspiration has no Borders"
-              width="370px"
-            />
+              width="370"
+              />
+              <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
              <div class="group-item">
             <h2 class="progect">Inspiration has no Borders</h2>
             <p class="progect-name">Веб-сайт</p>
             </div>
+            </a>
           </li>
           <li class="item">
-            <img
+            <a href="" class="projects-link">
+              <div class="project-thumb">
+              <img
               src="./images/magazine.jpg"
               alt="Издание Limited Edition"
-              width="370px"
-            />
+              width="370"
+              />
+              <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
              <div class="group-item">
             <h2 class="progect">Издание Limited Edition</h2>
             <p class="progect-name">Дизайн</p>
-          </li>
-          <li class="item">
-            <img src="./images/tag.jpg" alt="Проект LAB" />
-             <div class="group-item">
-            <h2 class="progect">Проект LAB</h2>
-            <p class="progect-name">Маркетинг</p>
             </div>
+            </a>
           </li>
           <li class="item">
-            <img
+           <a href="" class="projects-link">
+              <div class="project-thumb">
+              <img src="./images/tag.jpg" alt="Проект LAB" width="370" />
+            <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
+              <div class="group-item">
+                <h2 class="progect">Проект LAB</h2>
+                <p class="progect-name">Маркетинг</p>
+            </div>
+           </a>
+          </li>
+          <li class="item">
+           <a href="" class="projects-link">
+              <div class="project-thumb">
+              <img
               src="./images/laptophands.jpg"
               alt="Growing Business Growing Business"
-              width="370px"
-            />
+              width="370"
+              />
+              <div class="project-description">
+                <p class="">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
              <div class="group-item">
             <h2 class="progect">Growing Business</h2>
             <p class="progect-name">Growing Business</p> 
             </div>
+           </a>
           </li>
         </ul>
         </div>
@@ -210,7 +275,6 @@
              </li>
            </ul>
           </div>
-        </address>
       </div>
     </footer>
   </body>
