--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
       <section class="hero">
         <div class="container">
           <h1>Эффективные решения для вашего бизнеса</h1>
-          <button class="button" type="button">Заказать услугу</button>
+          <button data-modal-open class="button" type="button">
+            Заказать услугу
+          </button>
         </div>
       </section>
       <!--Особенности-->
@@ -400,5 +402,20 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg width="18" height="18" fill="none">
+            <path
+              d="M15 4.10786 13.8921 3 9.5 7.39214 5.10786 3 4 4.10786 8.39214 8.5 4 12.8921 5.10786 14 9.5 9.60786 13.8921 14 15 12.8921 10.6079 8.5 15 4.10786Z"
+              fill="#000"
+            />
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
